# MSCS-632-A01

./: README.md
week-2/assignment-2/: README.md
week-2/assignment-2/part-1/section-2/: main.cpp  main.js  main.py
week-2/assignment-2/part-2/section-3/: MemoryDemo.java  memory.cpp  memory.java  memory.rs
week-4/assignment-4/: README.md
week-4/assignment-4/go/: .gitignore  README.md  go.mod  main.go
week-4/assignment-4/go/config/: config.go
week-4/assignment-4/go/helpers/: helpers.go
week-4/assignment-4/go/models/: employee.go
week-4/assignment-4/go/scheduler/: scheduler.go
week-4/assignment-4/python/: .gitignore  README.md  main.py  pyproject.toml
week-4/assignment-4/python/src/: config.py  gui.py  helpers.py  models.py  scheduler.py
week-4/assignment-4/python/src/templates/: schedule_template.html
week-6/assignment-5/: README.md
week-6/assignment-5/RideSharingSystem_Cpp/: README.md  main.cpp  run.sh
week-6/assignment-5/RideSharingSystem_Cpp/include/: Driver.h  PremiumRide.h  Ride.h  Rider.h  StandardRide.h
week-6/assignment-5/RideSharingSystem_Smalltalk/: README.md  RideSharingSystem.st
week-7/assignment-6/: README.md
week-7/assignment-6/go-ride-sharing-system/: go.mod
week-7/assignment-7/go-ride-sharing-system/: .gitignore  Makefile  README.md
week-7/assignment-7/java-ride-sharing-system/: .gitignore  Makefile  README.md
week-8/assignment-7/multi-paradigm-statistics/: .gitignore  Makefile  README.md
week-8/assignment-8/: Makefile  README.md  family_tree.pl
week-8/assignment-8/tests/: family_tree_tests.pl
(+23 files in other folders)
