[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-4"
version = "0.1.0"
description = "Manage employee shift scheduling for a company operating 7 days a week with 3 shifts per day: Morning, Afternoon, Evening."
readme = "README.md"
urls = {homepage = "https://github.com/aashishshrestha09/MSCS-632-A01"}
dependencies = [
    "pyqt6==6.9.0",
    "Jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
  "black==24.3.0",
  "pyflakes==3.2.0",
]